src/LinguagemC.java
/* Generated By:JavaCC: Do not edit this line. LinguagemC.java */
import java.util.*;
import java.io.*;

public class LinguagemC implements LinguagemCConstants {
  public static void main(String args []) throws ParseException, IOException, Exception
  {
     LinguagemC parser = new LinguagemC(new FileInputStream("codigo.txt"));
    try
    {
      LinguagemC.inicio();
    }
    catch (ParseException e)
    {
      System.out.println("Erros foram encontrados. " + e);
    }
    }

  static final public void inicio() throws ParseException {
    Programa();
    jj_consume_token(0);
    System.out.print("\u005cnGRAMATICA ACEITA\u005cn");
  }

  static final public void Programa() throws ParseException {
    label_1:
    while (true) {
      BibliotecaDeclaracao();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 78:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case INT:
      case CHAR:
      case FLOAT:
      case DOUBLE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      FuncaoDeclaracao();
    }
    Main();
  }

  static final public void BibliotecaDeclaracao() throws ParseException {
    jj_consume_token(78);
    jj_consume_token(MENOR_Q);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PONTO);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(MAIOR_Q);
  }

  static final public void FuncaoDeclaracao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      jj_consume_token(VOID);
      break;
    case INT:
    case CHAR:
    case FLOAT:
    case DOUBLE:
      TipoDeDados();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ABRE_PARENTESE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case CHAR:
    case FLOAT:
    case DOUBLE:
      ListaDeParametros();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_PARENTESE);
    jj_consume_token(ABRE_CHAVE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
    case FOR:
    case IF:
    case WHILE:
    case PRINTF:
    case SCANF:
    case INT:
    case CHAR:
    case FLOAT:
    case DOUBLE:
    case IDENTIFICADOR:
      CorpoDaDeclaracao();
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_CHAVE);
  }

  static final public void Main() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 79:
      jj_consume_token(79);
      break;
    case 80:
      jj_consume_token(80);
      break;
    case 81:
      jj_consume_token(81);
      break;
    case 82:
      jj_consume_token(82);
      break;
    case 83:
      jj_consume_token(83);
      break;
    case 84:
      jj_consume_token(84);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    BlocoDeDeclaracoes();
  }

  static final public void TipoDeDados() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHAR:
      jj_consume_token(CHAR);
      break;
    case INT:
      jj_consume_token(INT);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void DeclaracaoVariavel() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CHAR:
      jj_consume_token(CHAR);
      jj_consume_token(IDENTIFICADOR);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
        jj_consume_token(VIRGULA);
        jj_consume_token(IDENTIFICADOR);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
        jj_consume_token(ASPAS_SIMPLES);
        jj_consume_token(IDENTIFICADOR);
        jj_consume_token(ASPAS_SIMPLES);
        break;
      default:
        jj_la1[8] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      break;
    case INT:
      jj_consume_token(INT);
      jj_consume_token(IDENTIFICADOR);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        jj_consume_token(VIRGULA);
        jj_consume_token(IDENTIFICADOR);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
        jj_consume_token(ATR_INT);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      jj_consume_token(IDENTIFICADOR);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[11] = jj_gen;
          break label_5;
        }
        jj_consume_token(VIRGULA);
        jj_consume_token(IDENTIFICADOR);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
        jj_consume_token(ATR_REAL);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
      jj_consume_token(IDENTIFICADOR);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_6;
        }
        jj_consume_token(VIRGULA);
        jj_consume_token(IDENTIFICADOR);
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATRIBUICAO:
        jj_consume_token(ATRIBUICAO);
        jj_consume_token(ATR_REAL);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(PONTO_VIRGULA);
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ListaDeParametros() throws ParseException {
    Parametro();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      jj_consume_token(VIRGULA);
      Parametro();
    }
  }

  static final public void Parametro() throws ParseException {
    TipoDeDados();
    jj_consume_token(IDENTIFICADOR);
  }

  static final public void ChamadaDeFuncao() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ABRE_PARENTESE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VIRGULA:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_8;
        }
        jj_consume_token(VIRGULA);
        jj_consume_token(IDENTIFICADOR);
      }
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    jj_consume_token(FECHA_PARENTESE);
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void CorpoDaDeclaracao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case CHAR:
    case FLOAT:
    case DOUBLE:
      DeclaracaoVariavel();
      break;
    default:
      jj_la1[19] = jj_gen;
      if (jj_2_1(3)) {
        ChamadaDeFuncao();
      } else if (jj_2_2(3)) {
        ExpressaoMaisAtribuicao();
      } else if (jj_2_3(3)) {
        AtribuicaoSimples();
        jj_consume_token(PONTO_VIRGULA);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          If_Else();
          break;
        case WHILE:
          While();
          break;
        case FOR:
          For();
          break;
        case PRINTF:
          Printf();
          break;
        case SCANF:
          Scanf();
          break;
        case RETURN:
          jj_consume_token(RETURN);
          TiposRetorno();
          jj_consume_token(PONTO_VIRGULA);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void TiposRetorno() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFICADOR:
      jj_consume_token(IDENTIFICADOR);
      break;
    case ATR_INT:
      jj_consume_token(ATR_INT);
      break;
    case ATR_REAL:
      jj_consume_token(ATR_REAL);
      break;
    case ABRE_PARENTESE:
      jj_consume_token(ABRE_PARENTESE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFICADOR:
        jj_consume_token(IDENTIFICADOR);
        break;
      case ATR_INT:
        jj_consume_token(ATR_INT);
        break;
      case ATR_REAL:
        jj_consume_token(ATR_REAL);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(FECHA_PARENTESE);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AtribuicaoSimples() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ATRIBUICAO);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATR_INT:
    case ATR_REAL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ATR_INT:
        jj_consume_token(ATR_INT);
        break;
      case ATR_REAL:
        jj_consume_token(ATR_REAL);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SOMA:
        case SUBTRACAO:
        case MULTIPLICACAO:
        case DIVISAO:
        case RESTO_DIVISAO:
          ;
          break;
        default:
          jj_la1[24] = jj_gen;
          break label_9;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SOMA:
          jj_consume_token(SOMA);
          break;
        case SUBTRACAO:
          jj_consume_token(SUBTRACAO);
          break;
        case MULTIPLICACAO:
          jj_consume_token(MULTIPLICACAO);
          break;
        case RESTO_DIVISAO:
          jj_consume_token(RESTO_DIVISAO);
          break;
        case DIVISAO:
          jj_consume_token(DIVISAO);
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ATR_INT:
          jj_consume_token(ATR_INT);
          break;
        case ATR_REAL:
          jj_consume_token(ATR_REAL);
          break;
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    case ASPAS_SIMPLES:
      jj_consume_token(ASPAS_SIMPLES);
      jj_consume_token(IDENTIFICADOR);
      jj_consume_token(ASPAS_SIMPLES);
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void OperacoesNumeros() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATR_INT:
      jj_consume_token(ATR_INT);
      break;
    case ATR_REAL:
      jj_consume_token(ATR_REAL);
      break;
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SOMA:
      jj_consume_token(SOMA);
      break;
    case SUBTRACAO:
      jj_consume_token(SUBTRACAO);
      break;
    case MULTIPLICACAO:
      jj_consume_token(MULTIPLICACAO);
      break;
    case RESTO_DIVISAO:
      jj_consume_token(RESTO_DIVISAO);
      break;
    case DIVISAO:
      jj_consume_token(DIVISAO);
      break;
    case IGUAL:
    case DIFERENCA:
    case MAIOR_Q:
    case MENOR_Q:
    case MAIOR_IGUAL:
    case MENOR_IGUAL:
      ExpressaoRelacional();
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATR_INT:
      jj_consume_token(ATR_INT);
      break;
    case ATR_REAL:
      jj_consume_token(ATR_REAL);
      break;
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ExpressaoMaisAtribuicao() throws ParseException {
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUBTRACAO_IGUAL:
      jj_consume_token(SUBTRACAO_IGUAL);
      break;
    case DIVISAO_IGUAL:
      jj_consume_token(DIVISAO_IGUAL);
      break;
    case MULTIPLICACAO_IGUAL:
      jj_consume_token(MULTIPLICACAO_IGUAL);
      break;
    case RESTO_IGUAL:
      jj_consume_token(RESTO_IGUAL);
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ATR_INT:
      jj_consume_token(ATR_INT);
      break;
    case ATR_REAL:
      jj_consume_token(ATR_REAL);
      break;
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void If_Else() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(ABRE_PARENTESE);
    label_10:
    while (true) {
      Expressao();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEGACAO:
      case ABRE_PARENTESE:
      case IDENTIFICADOR:
      case ATR_INT:
      case ATR_REAL:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_10;
      }
    }
    jj_consume_token(FECHA_PARENTESE);
    BlocoDeDeclaracoes();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      BlocoDeDeclaracoes();
      break;
    default:
      jj_la1[34] = jj_gen;
      ;
    }
  }

  static final public void While() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(ABRE_PARENTESE);
    Expressao();
    jj_consume_token(FECHA_PARENTESE);
    BlocoDeDeclaracoes();
  }

  static final public void For() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(ABRE_PARENTESE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    default:
      jj_la1[35] = jj_gen;
      ;
    }
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ATRIBUICAO);
    jj_consume_token(ATR_INT);
    jj_consume_token(PONTO_VIRGULA);
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MENOR_Q:
      jj_consume_token(MENOR_Q);
      break;
    case MAIOR_Q:
      jj_consume_token(MAIOR_Q);
      break;
    case MENOR_IGUAL:
      jj_consume_token(MENOR_IGUAL);
      break;
    case MAIOR_IGUAL:
      jj_consume_token(MAIOR_IGUAL);
      break;
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(ATR_INT);
    jj_consume_token(PONTO_VIRGULA);
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INCREMENTO:
      jj_consume_token(INCREMENTO);
      break;
    case DECREMENTO:
      jj_consume_token(DECREMENTO);
      break;
    default:
      jj_la1[37] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(FECHA_PARENTESE);
    BlocoDeDeclaracoes();
  }

  static final public void Printf() throws ParseException {
    jj_consume_token(PRINTF);
    jj_consume_token(ABRE_PARENTESE);
    jj_consume_token(ASPAS_DUPLAS);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASPAS_DUPLAS);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[38] = jj_gen;
        break label_11;
      }
      jj_consume_token(VIRGULA);
      jj_consume_token(IDENTIFICADOR);
    }
    jj_consume_token(FECHA_PARENTESE);
    jj_consume_token(PONTO_VIRGULA);
  }

  static final public void Scanf() throws ParseException {
    jj_consume_token(SCANF);
    jj_consume_token(ABRE_PARENTESE);
    jj_consume_token(ASPAS_DUPLAS);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(ASPAS_DUPLAS);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRGULA:
        ;
        break;
      default:
        jj_la1[39] = jj_gen;
        break label_12;
      }
